# AssistantMD

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REVIEW_FINDINGS.md  CHAT_HISTORY_COMPACTION_SPEC.md  CHAT_TASK_API_RETIREMENT_PLAN.md  CHAT_TASK_EXECUTION_REDESIGN_PLAN.md  CHAT_TOOL_REPLAY_PLAN.md  CONTEXT_MANAGER_REFACTOR_PLAN.md  DELEGATE_TOOL_IMPLEMENTATION_PLAN.md  DELEGATION_CANCELLATION_KEEPALIVE_PLAN.md  EXECUTION_TASK_COORDINATOR_IMPLEMENTATION_PLAN.md  EXECUTION_TASK_COORDINATOR_PLAN.md  EXECUTION_TASK_RUNNER_REDESIGN_PLAN.md  FRONTEND_REFACTOR_PLAN.md  GOAL_OPS_IMPLEMENTATION_PLAN.md  HISTORY_PROCESSOR_BRIEFING.md  IMPLEMENTATION_PLAN_EMBEDDING_ONBOARDING.md  IMPLEMENTATION_PLAN_REASONING_HISTORY_POLICY.md  IMPLEMENTATION_PLAN_TRANSIENT_THINKING_UI.md  IMPLEMENTATION_PLAN_VAULT_REFRESH_LOG_NOISE.md  ISSUE35_GOAL1_PENDING_PLAN.md  ISSUE35_GOAL2_WORKFLOW_LIFECYCLE_PLAN.md  ISSUE35_GOAL3_MAX_RUNS_PLAN.md  LICENSE  LONG_RUNNING_TASKS_IMPLEMENTATION_PLAN.md  MEMORY_HISTORY_IMPLEMENTATION.md  MEMORY_SERVICE_PLAN.md  MONTY_DIRECT_TOOL_CALLS_PLAN.md  MONTY_TOOL_RESULT_CONTRACT_PLAN.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  TOOL_OUTPUT_ROUTING_SPEC.md  UNIFIED_THINKING_PLAN.md  URL_IMPORT_FETCH_REFACTOR_PLAN.md  activity-logging-audit-plan.md  adr-backfill-implementation-plan.md  authoring_architecture_plan.md  (+61 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  main.tf  setup.sh
api/: __init__.py  endpoints.py  exceptions.py  import_models.py  models.py  services.py  utils.py
core/: __init__.py  constants.py  core_services.py  database.py  database_migrations.py  logger.py  system_migrations.py
docker/: Dockerfile  README.md  pyproject.toml
docs/: README.md  index.md  security.md
scripts/: REVIEW_MATRIX.md  __init__.py  (+13 more)
(+562 files in other folders)
