[project]
name = "project-assistant"
version = "0.1.0"
description = "Automated personal productivity system with AI-powered markdown workflows"
authors = [
    { name = "AssistantMD Team" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-ai>=1.60.0",
    "fastapi>=0.100.0",
    "python-multipart",
    "logfire[fastapi,sqlalchemy]",
    "apscheduler>=3.10.0",
    "python-dateutil>=2.8.2",
    "sqlalchemy>=2.0.0",
    "ddgs>=1.0.0",
    "tavily-python>=0.7.11",
    "httpx>=0.27.0",
    "anyio>=3.7.0",
    "markdownify>=1.2.2",
    "pymupdf>=1.24.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
target-version = ['py312']
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["validation"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
